Remove linear-function easing TypeError exemption.

Invalid values for 'easing' should throw a TypeError
(http://w3c.github.io/web-animations/#dom-animationeffecttiming-easing).
In crrev.com/1851003002, this was implemented for all invalid values except
"function (a){return a}", as described in the bug referenced below. The
incidence of this special case is below the feature removal threshold. This
patch removes the exemption, bringing the code in line with the spec.

BUG=601672

Review-Url: https://codereview.chromium.org/2129783003
Cr-Commit-Position: refs/heads/master@{#412465}

Former-commit-id: 5c2c07865e41b3cbb10e8c77508b7f86709a7ce3