third_party/WebKit/Source/core/frame/Deprecation.cpp
@@ -358,9 +358,6 @@ String Deprecation::deprecationMessage(UseCounter::Feature feature)
     case UseCounter::HTMLKeygenElement:
         return willBeRemoved("The <keygen> element", 54, "5716060992962560");
 
-    case UseCounter::WebAnimationsEasingAsFunctionLinear:
-        return String::format("Specifying animation easing as a function is deprecated and all support will be removed in %s, at which point this will throw a TypeError. This warning may have been triggered by the Web Animations or Polymer polyfills. See http://crbug.com/601672 for details.", milestoneString(54));
-
     case UseCounter::WindowPostMessageWithLegacyTargetOriginArgument:
         return replacedWillBeRemoved("'window.postMessage(message, transferables, targetOrigin)'", "'window.postMessage(message, targetOrigin, transferables)'", 54, "5719033043222528");
 
